unpackaged/main/default/objects/litify_docs__Archive_Job__c/litify_docs__Archive_Job__c.object-meta.xml
<CustomObject>
    <description>Stores archive job metadata</description>
    <label>Archive Job</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Archive Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>