unpackaged/main/default/objects/litify_docs__Archive_Job__c/fields/litify_docs__Current_Apex_Job__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Current_Apex_Job__c</fullName>
    <description>The currently processing salesforce apex job id</description>
    <label>Current Apex Job</label>
    <length>18</length>
    <type>Text</type>
</CustomField>