unpackaged/main/default/objects/litify_docs__Archive_Job__c/fields/litify_docs__Operation__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Operation__c</fullName>
    <description>Either Archive or Restore, depending on the process</description>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Archive</fullName>
            </value>
            <value>
                <fullName>Restore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>