unpackaged/main/default/objects/litify_docs__Archive_Job__c/fields/litify_docs__Payload__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Payload__c</fullName>
    <description>Job request payload, includes file ids and record ids</description>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>